Okhttp and retry when socket execption timeout/closed is occurs